<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/offWhite">

    <LinearLayout
        android:id="@+id/textViewLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="18dp">

        <TextView
            android:id="@+id/TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textColor="@color/colorBlack"
            android:text="@string/bottomSheetOdjava"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewLinearLayout"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="5dp"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/neBtn"
            android:layout_width="80dp"
            android:layout_height="36dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/secondary"
            android:text="@string/ne"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/daBtn"
            android:layout_width="80dp"
            android:layout_height="36dp"
            android:layout_marginStart="50dp"
            android:background="@drawable/primary"
            android:text="@string/da"
            android:textColor="@color/offWhite"
            android:textSize="14sp"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</RelativeLayout>