<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/offWhite"
    tools:context=".TraziFragment">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <ProgressBar
            android:id="@+id/traziProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar" />

        <EditText
            android:id="@+id/traziEditText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/edittext_background_classic"
            android:ems="10"
            android:hint="@string/traziId"
            android:inputType="textPersonName"
            android:maxLength="14"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <Button
            android:id="@+id/traziBtn"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginBottom="45dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/primary"
            android:text="@string/trazi"
            android:textColor="@color/offWhite"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/skenirajBtn"
            app:layout_constraintTop_toBottomOf="@+id/traziEditText"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/skenirajBtn"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginBottom="45dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/primary"
            android:text="@string/skeniraj"
            android:textColor="@color/offWhite"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/traziBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/traziEditText"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/dodajBtn"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginBottom="45dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/primary_light"
            android:text="@string/spremi"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/skenirajBtn"
            app:layout_constraintEnd_toStartOf="@+id/azurirajBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/traziEditText"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/azurirajBtn"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginBottom="45dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:text="@string/azuriraj"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:background="@drawable/primary_light"
            app:layout_constraintBottom_toTopOf="@+id/traziBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/dodajBtn"
            app:layout_constraintTop_toBottomOf="@+id/traziEditText"
            app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>