<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/offWhite"
    android:overScrollMode="never"
    tools:context=".PodaciProizvodaFragment">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/fragmentLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintBottom_toTopOf="@+id/linlay0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linlay0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linlayBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageViewPP"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:background="@drawable/placeholder"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linlayProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/linlay1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linlayBtn">

            <ProgressBar
                android:id="@+id/progressBarPP"
                style="@android:style/Widget.Holo.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linlayBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/linlayProgress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linlay0">

            <Button
                android:id="@+id/spremiSlikuBtn"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/primary"
                android:text="@string/spremi"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linlay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/layout_proizvodi_background"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linlayProgress">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="58"
                android:fontFamily="sans-serif"
                android:text="@string/kod"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/ppId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:text="@string/id"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linlay2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="100"
            android:padding="5dp"
            android:background="@drawable/layout_proizvodi_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linlay1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="58"
                android:fontFamily="sans-serif"
                android:text="@string/imeProizvoda"
                android:textSize="18sp" />

                <TextView
                    android:id="@+id/ppImeProizvoda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:textStyle="bold"
                    android:layout_weight="42"
                    android:text="@string/imeProizvoda"
                    android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linlay3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="100"
            android:padding="5dp"
            android:background="@drawable/layout_proizvodi_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linlay2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_weight="58"
                app:fontFamily="sans-serif"
                android:text="@string/opisProizvoda"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/ppOpis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/opisProizvoda"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:layout_weight="42"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linlay4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="100"
            android:padding="5dp"
            android:background="@drawable/layout_proizvodi_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linlay3">

            <TextView
                android:id="@+id/cijenaTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="58"
                android:text="@string/cijena"
                android:fontFamily="sans-serif"
                android:textSize="18sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="40">

                <TextView
                    android:id="@+id/ppCijena"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/textColor"
                    android:textStyle="bold"
                    android:text="@string/cijena"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:textColor="@color/textColor"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/ppCijena"
                    android:text="@string/kn"/>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linlay6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="100"
            android:padding="5dp"
            android:background="@drawable/layout_proizvodi_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linlay5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="58"
                android:fontFamily="sans-serif"
                android:text="@string/sveukupnaCijena"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/ppCijenaSum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:textStyle="bold"
                android:textColor="@color/textColor"
                android:gravity="center_vertical"
                android:text="@string/da"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linlay5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="100"
            android:padding="5dp"
            android:background="@drawable/layout_proizvodi_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linlay4">

            <TextView
                android:id="@+id/kolicinaTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="58"
                android:text="@string/kolicina"
                android:fontFamily="sans-serif"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/ppKolicina"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:textColor="@color/textColor"
                android:layout_weight="40"
                android:text="@string/da"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linlay7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/layout_proizvodi_background"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linlay6">

            <TextView
                android:id="@+id/datumTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="58"
                android:fontFamily="sans-serif"
                android:text="@string/datum"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/ppDatum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:text="@string/datum"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>